syntax = "proto3";

option go_package = "example.com/raft-cache/ca";

package ca;

service CacheAdmin {
    rpc GetLeader(LeaderRequest) returns (LeaderResponse) {}
    rpc GetConfiguration(ConfigurationRequest) returns (ConfigurationResponse) {}
    rpc GetState(StateRequest) returns (StateResponse) {}
    rpc AddVoter(AddVoterRequest) returns (AddVoterResponse) {}
    rpc AddNonVoter(AddNonVoterRequest) returns (AddNonVoterResponse) {}
    rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse) {}
    rpc PromotePeer(PromotePeerRequest) returns (PromotePeerResponse) {}
    rpc Join(JoinRequest) returns (JoinResponse) {}
}

message LeaderRequest {
}

message LeaderResponse {
    string id = 1;
    string address = 2;
}

message AddVoterRequest {
	string id = 1;
	string address = 2;
	uint64 previous_index = 3;
}

message AddNonVoterRequest {
	string id = 1;
	string address = 2;
	uint64 previous_index = 3;
}

message AddVoterResponse {
    uint64 index = 1;
}

message AddNonVoterResponse {
    uint64 index = 1;
}

message RemovePeerRequest {
    string id = 1;
    uint64 previous_index = 2;
}

message RemovePeerResponse {
    uint64 index = 1;
}

message PromotePeerRequest {
    string id = 1;
    string address = 2;
    uint64 previous_index = 3;
}

message PromotePeerResponse {
    uint64 index = 1;
}

message ConfigurationRequest {
}

message ConfigurationResponse {
    repeated Server voters = 1;
    repeated Server non_voters = 2;
}

message StateRequest {
}

message StateResponse {
    string state = 1;
}

message Server {
    string id = 1;
    string address = 2;
    string state = 3;
}

message JoinRequest {
    string id = 1;
    string address = 2;
    uint64 previous_index = 3;
}

message JoinResponse {
    uint64 index = 1;
    string state = 3;
}